cmake_minimum_required(VERSION 3.17)
project(CppLearning)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppLearning main.cpp Sort/Sort.cpp Sort/Sort.h Sort/BubbleSort.cpp Sort/BubbleSort.h Sort/SortBase.cpp Sort/SortBase.h Sort/InsertionSort.cpp Sort/InsertionSort.h Sort/SelectSort.cpp Sort/SelectSort.h Sort/MergeSort.cpp Sort/MergeSort.h Sort/QuickSort.cpp Sort/QuickSort.h OOP/Parent.cpp OOP/Parent.h OOP/Child1.cpp OOP/Child1.h OOP/OOP.cpp OOP/OOP.h VirtualTable/Base1.cpp VirtualTable/Base1.h VirtualTable/Base2.cpp VirtualTable/Base2.h VirtualTable/Derive.cpp VirtualTable/Derive.h VirtualTable/VirtualTable.cpp VirtualTable/VirtualTable.h DynamicMemory/DynamicMemory.cpp DynamicMemory/DynamicMemory.h DynamicMemory/StrVec.cpp DynamicMemory/StrVec.h DynamicMemory/ValueClass.cpp DynamicMemory/ValueClass.h DynamicMemory/PointerClass.cpp DynamicMemory/PointerClass.h SmartPointer/SmartPointer.cpp SmartPointer/SmartPointer.h SmartPointer/TargetClass.cpp SmartPointer/TargetClass.h SmartPointer/StrBlob.cpp SmartPointer/StrBlob.h)